--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wall Visualization</title>
-    <link rel="stylesheet" href="Chumban_BopcheWallVisualization.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Wall Visualization</h1>
@@ -29,6 +29,6 @@
         <p>Visible from Right: <span id="right-count">0</span></p>
     </div>
 
-    <script src="Chumban_BopcheWallVisualization.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
